--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
-    <!-- <script src="js/jquery-ui.js" type="text/javacsript"></script> -->
-    <!-- <script src="js/jquery.min.js" type="text/javacsript"></script> -->
+
+   
+    <script src="js/owl.carousel.js"></script>
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="css/jquery-ui.css"> -->
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.4.2/css/all.css' integrity='sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns'
@@ -35,85 +36,94 @@
 
 <body>
     <header>
-        <div class="container-fluid bg-color-1 text-white ">
-            <div class="container px-0">
-                <nav class="navbar navbar-expand-lg  py-0 nav1">
-                    <!-- Brand -->
-                    <!-- Toggler/collapsibe Button -->
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                        <span class="fa fa-list"></span>
-                    </button>
-
-                    <!-- Navbar links -->
-
-                    <div class="collapse navbar-collapse  p-0 py-1" id="collapsibleNavbar">
-
-                        <div class="pull-left">
-                            <ul class="navbar-nav ">
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link py-0 ">VỀ KIMI</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link py-0">KINH DOANH</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link py-0">HỆ THỐNG PHÂN PHỐI</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link py-0">KIẾN THỨC</a>
-                                </li>
-                            </ul>
+        <div class="container-fluid bg-color-1 text-white">
+            <div class="container">
+                <div class="row">
+                    <div class="container-fluid px-0">
+                        <div id="menu-1-left" class="float-left">
+                            <nav class="navbar navbar-expand-lg  py-0 px-0 nav1">
+                                <button id="collapse-cus" class="navbar-toggler" type="button" data-toggle="collapse"
+                                    data-target="#menuleft">
+                                    <span class="fa fa-list"></span>
+                                </button>
+                                <div class="collapse navbar-collapse  p-0 py-1 " id="menuleft">
+                                    <ul class="navbar-nav">
+                                        <li class="nav-item ">
+                                            <a href="#" class="nav-link py-0 px-0 vertical-bar">VỀ KIMI</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a href="#" class="nav-link py-0 px-0 vertical-bar">KINH DOANH</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a href="#" class="nav-link py-0 px-0 vertical-bar">HỆ THỐNG PHÂN PHỐI</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a href="#" class="nav-link py-0 px-0">KIẾN THỨC</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </nav>
                         </div>
-                        <div class="pull-right">
+                        <div id="menu-1-right" class="float-right">
+                            <nav class="navbar navbar-expand-lg  py-0 px-0 nav1">
+                                <a class="navbar-toggler" data-toggle="collapse" data-target="#menuright">
+                                    <i class="fa fa-phone pr-2" style="font-size:12px"> Hotline: 0344647733</i>
+                                </a>
 
-                            <ul class="navbar-nav ">
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link py-0"> <i class="fa fa-phone pr-2" style="font-size:12px"></i>Hot
-                                        line:
-                                        0344647733</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link py-0"> <i class="fas fa-sign-in-alt pr-2" style="font-size:12px"></i>YÊU
-                                        THÍCH</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link py-0 "> <i class="far fa-handshake pr-2" style="font-size:12px"></i>LIÊN
-                                        HỆ</a>
-                                </li>
-                            </ul>
+                                <div class="collapse navbar-collapse  p-0 py-1 px-0" id="">
+                                    <ul class="navbar-nav px-0">
+                                        <li class="nav-item">
+                                            <a href="#" class="nav-link py-0 vertical-bar"> <i class="fa fa-phone pr-2"
+                                                    style="font-size:12px"></i>Hot
+                                                line:
+                                                0344647733</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a href="#" class="nav-link py-0 vertical-bar"> <i class="fas fa-sign-in-alt pr-2"
+                                                    style="font-size:12px"></i>YÊU
+                                                THÍCH</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a href="#" class="nav-link py-0 "> <i class="far fa-handshake pr-2" style="font-size:12px"></i>LIÊN
+                                                HỆ</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </nav>
                         </div>
-
                     </div>
-                </nav>
+                </div>
             </div>
-
         </div>
+
+
+
         <div class="container-fluid bg-color-2 text-white ">
             <div class="container px-0">
-                <nav class="navbar navbar-expand-md  py-0 nav1">
+                <nav class="navbar navbar-expand-lg  py-0 px-0 nav1">
                     <!-- Brand -->
                     <!-- Toggler/collapsibe Button -->
-                    <button class="navbar-toggler float-right " type="button" data-toggle="collapse" data-target="#collapsibleNavbar-2">
-                        <span class="fa fa-align-justify"></span>
+                    <button class="navbar-toggler pull-right " type="button" data-toggle="collapse" data-target="#collapsibleNavbar-2">
+                        <span class="fa fa-bars"></span>
                     </button>
                     <!-- Navbar links -->
                     <div class="collapse navbar-collapse  p-0 py-1" id="collapsibleNavbar-2">
                         <div class="float-lg-left">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link py-0 ">TRANG CHỦ</a>
+                                    <a href="#" class="nav-link py-0 px-0 vertical-bar">TRANG CHỦ</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link py-0">SẢN PHẨM</a>
+                                    <a href="#" class="nav-link py-0 px-0 vertical-bar">SẢN PHẨM</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link py-0">TIN TỨC</a>
+                                    <a href="#" class="nav-link py-0 px-0 vertical-bar">TIN TỨC</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link py-0">GIỚI THIỆU</a>
+                                    <a href="#" class="nav-link py-0 px-0 vertical-bar">GIỚI THIỆU</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link py-0">LIÊN HỆ</a>
+                                    <a href="#" class="nav-link py-0 px-0 vertical-bar">LIÊN HỆ</a>
                                 </li>
                             </ul>
                         </div>
@@ -847,25 +857,25 @@
                 <p style="line-height: 18px">P & P Communications jsc tự hào về những dự án đã làm và được nhận tiếp
                     tục hợp tác dài hạn. Dù đối tác ở khu vực nào, với quy mô như thế nào
                     hoặc định hướng phát triển ra sao chúng tôi vẫn luôn niềm nở phục vụ tinh thần đóng góp.</p>
-                <!-- <div class="container-fluid">
-                        <div id="owl-demo">
-                            <div class="item">
-                                <a href="#"><img src="images/blackberry.png" alt=""></a>
-                            </div>
-                            <div class="item">
-                                <a href="#"><img src="images/LGlogo.png" alt=""></a>
-                            </div>
-                            <div class="item">
-                                <a href="#"><img src="images/samsung.png" alt=""></a>
-                            </div>
-                            <div class="item">
-                                <a href="#"><img src="images/Sony_Ericsson85.png" alt=""></a>
-                            </div>
-                            <div class="item">
-                                <a href="#"><img src="images/nokia_logo.jpeg" alt=""></a>
-                            </div>
-                        </div>
-                    </div> -->
+                <!-- <div class="container-fluid"> -->
+                <!-- <div class="owl-carousel owl-theme">
+                    <div class="item">
+                        <a href="#"><img src="images/blackberry.png" alt=""></a>
+                    </div>
+                    <div class="item">
+                        <a href="#"><img src="images/LGlogo.png" alt=""></a>
+                    </div>
+                    <div class="item">
+                        <a href="#"><img src="images/samsung.png" alt=""></a>
+                    </div>
+                    <div class="item">
+                        <a href="#"><img src="images/Sony_Ericsson85.png" alt=""></a>
+                    </div>
+                    <div class="item">
+                        <a href="#"><img src="images/nokia_logo.jpeg" alt=""></a>
+                    </div>
+                </div> -->
+                <!-- </div> -->
             </div>
             <div class="bg-color-1" style="height:4px">
             </div>
@@ -894,19 +904,19 @@
                                     <div class="float-lg-left text-sm-center">
                                         <ul class="navbar-nav">
                                             <li class="nav-item">
-                                                <a href="#" class="nav-link py-0 ">TRANG CHỦ</a>
+                                                <a href="#" class="nav-link py-0 px-0 vertical-bar">TRANG CHỦ</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a href="#" class="nav-link py-0">SẢN PHẨM</a>
+                                                <a href="#" class="nav-link py-0 px-0 vertical-bar">SẢN PHẨM</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a href="#" class="nav-link py-0">TIN TỨC</a>
+                                                <a href="#" class="nav-link py-0 px-0 vertical-bar">TIN TỨC</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a href="#" class="nav-link py-0">GIỚI THIỆU</a>
+                                                <a href="#" class="nav-link py-0 px-0 vertical-bar">GIỚI THIỆU</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a href="#" class="nav-link py-0">LIÊN HỆ</a>
+                                                <a href="#" class="nav-link py-0 px-0 vertical-bar">LIÊN HỆ</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -920,8 +930,8 @@
                                 <div id="plane" class="input-group-append">
                                     <a href="#">
                                         <span class="fa-stack fa-lg">
-                                            <i class="fa fa-circle fa-stack-2x color-1"></i>
-                                            <i class="fa fa-paper-plane fa-stack-1x fa-inverse color-2"></i>
+                                            <i class="fa fa-circle fa-stack-2x color-1 circle" id=""></i>
+                                            <i class="fa fa-paper-plane fa-stack-1x fa-inverse color-2 icon"></i>
                                         </span>
                                     </a>
                                 </div>
@@ -982,7 +992,7 @@
                 <div id="connect" class="text-center">
                     <a href="#">
                         <span class="fa-stack fa-lg">
-                            <i class="fa fa-circle fa-stack-2x circle" style="color:#a43c30"></i>
+                            <i class="fa fa-circle fa-stack-2x circle" id="google"></i>
                             <i class="fab fa-google-plus-g fa-stack-1x fa-inverse icon"></i>
                         </span>
                     </a>
@@ -1012,14 +1022,16 @@
         </div>
         <!-- <button class="btn btn-danger" id="clickMe">click me</button> -->
     </footer>
+    <a href="#" title="Header" data-toggle="popover" data-trigger="hover" data-content="Some content">Hover over me</a>
     <script>
         // $("#SoLuong").spinner();
     </script>
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script> -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
 
 </html>
