--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
 </head>
 
 <body>
+    <div id="top" class="my-auto">
+        <div class="text-center ">
+            <br>
+            <a href="#" style="color: white"><strong>TOP</strong></a>
+        </div>
+    </div>
     <header>
         <div class="container-fluid bg-color-1 text-white">
             <div class="container">
@@ -171,22 +177,6 @@
                         </ul>
                     </div>
 
-
-                    <!-- <ul class="navbar-nav ">
-                        <li class="nav- ">
-                            <a href="#" class="nav-link py-0"> <i class="fas fa-edit"></i>Kiểm tra đơn hàng</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown"> Tài khoản</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#"  class="dropdown-item"> <i class="far fa-user-circle" ></i> Đăng nhập</a></li>
-                                <li><a href="#"  class="dropdown-item" ><i class="fas fa-plus"></i> Đăng kí</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link py-0 "> <i class="fas fa-shopping-bag"  style="font-size:40px"></i></a>
-                        </li>
-                    </ul> -->
                 </div>
             </div>
         </div>
@@ -196,10 +186,27 @@
             <div class="row">
                 <div id="main-left" class="col-lg-9 col-md-12 col-sm-12">
                     <div id="summary" class="row">
-                        <div id="pictures bg-light" class="p-2 rounded col-lg-5 col-md-12 col-sm-12  bg-light">
-                            <img id="zoom_01" width="100%" src="images/nokia.jpg" data-zoom-image="images/nokia.jpg">
-                           
+                        <div id="tabs-img" class="p-2 rounded col-lg-5 col-md-12 col-sm-12  bg-light p-0">
+                            <div id="img-1" style="padding: 0px; margin-bottom: 10px;">
+                                <img id="zoom_01" width="100%" src="images/nokia.jpg" data-zoom-image="images/nokia.jpg">
+                            </div>
+                            <div id="img-2" style="padding: 0px; margin-bottom: 10px;">
+                                <img id="zoom_02" width="100%" src="images/nokia-xl.jpg" data-zoom-image="images/nokia-xl.jpg">
+                            </div>
+                            <ul style="border: none; padding: 0px; background-color: #f8f9fa">
+                                <li class="p-0">
+                                    <a href="#img-2"><img src="images/nokia-xl.jpg" alt="" width="50px"></a>
+                                </li>
+                                <li class="p-0">
+                                    <a href="#img-1"><img src="images/nokia.jpg" alt="" width="50px"></a>
+                                </li>
+
+                            </ul>
+
                         </div>
+                        <!-- <div id="pictures bg-light" class="p-2 rounded col-lg-5 col-md-12 col-sm-12  bg-light">
+                            <img id="zoom_01" width="100%" src="images/nokia.jpg" data-zoom-image="images/nokia.jpg">                          
+                        </div> -->
                         <div id="brief" class="col-lg-7 col-md-12 col-sm-12 px-5">
                             <h5 id="nameProd" class="border-bottom-ct">NOKIA XL (CTY)</h5>
                             <h4 id="currentCost" class="color-2">3,200,000đ</h4>
@@ -672,7 +679,7 @@
                                                 <p>Cổng hồng ngoại</p>
                                             </div>
                                             <div class="col-9">
-                                                <p>Không/p>
+                                                <p>Không</p>
                                             </div>
                                         </div>
                                         <div class="row bg-light mb-1" id="usb">
@@ -845,7 +852,7 @@
                         </div>
                     </div>
                     <h6 style="border-bottom: 1px solid black">SẢN PHẨM HOT</h6>
-                    <div class="product text-center pb-3">
+                    <div class="product text-center pb-3 ">
                         <a href="#"> <img src="images/nokia-925.jpg" alt="Nokia Lumia 925" class="w-100 img-prod p-3"></a>
                         <a href="#">NOKIA LUMIA 925(CTY)</a> <br>
                         <span><strong>7.704.000 ₫</strong></span>
@@ -876,7 +883,7 @@
             </div>
         </div>
     </main>
-    <footer>
+    <footer class="mt-3">
         <div id="info" class="container-fluid bg-light p-0">
             <div id="doiTac" class="container py-3">
 
@@ -938,15 +945,15 @@
                         <div class="col-lg-4 col-md-12">
                             <div class="input-group mb-3 my-auto float-lg-right">
                                 <!-- <div class=""> -->
-                                    <input id="emailSignup"  type="text" class="form-control" placeholder="Nhập Email đăng ký khuyến mại">
-                                    <div id="plane" class="input-group-append">
-                                        <a href="#">
-                                            <span class="fa-stack fa-lg">
-                                                <i class="fa fa-circle fa-stack-2x color-1 circle" id=""></i>
-                                                <i class="fa fa-paper-plane fa-stack-1x fa-inverse color-2 icon"></i>
-                                            </span>
-                                        </a>
-                                    </div>
+                                <input id="emailSignup" type="text" class="form-control" placeholder="Nhập Email đăng ký khuyến mại">
+                                <div id="plane" class="input-group-append">
+                                    <a href="#">
+                                        <span class="fa-stack fa-lg">
+                                            <i class="fa fa-circle fa-stack-2x color-1 circle" id=""></i>
+                                            <i class="fa fa-paper-plane fa-stack-1x fa-inverse color-2 icon"></i>
+                                        </span>
+                                    </a>
+                                </div>
                                 <!-- </div> -->
                             </div>
 
@@ -1035,7 +1042,6 @@
         </div>
         <!-- <button class="btn btn-danger" id="clickMe">click me</button> -->
     </footer>
-    <a href="#" title="Header" data-toggle="popover" data-trigger="hover" data-content="Some content">Hover over me</a>
     <script>
         // $("#SoLuong").spinner();
     </script>
