--- a/index.html
+++ b/index.html
@@ -103,14 +103,13 @@
         <div class="container-fluid bg-color-2 text-white ">
             <div class="container px-0">
                 <nav class="navbar navbar-expand-lg  py-0 px-0 nav1">
-                    <!-- Brand -->
-                    <!-- Toggler/collapsibe Button -->
-                    <button class="navbar-toggler pull-right " type="button" data-toggle="collapse" data-target="#collapsibleNavbar-2">
-                        <span class="fa fa-bars"></span>
-                    </button>
-                    <!-- Navbar links -->
-                    <div class="collapse navbar-collapse  p-0 py-1" id="collapsibleNavbar-2">
-                        <div class="float-lg-left">
+                    <div id="width-cus">
+                        <button class="navbar-toggler pull-right " type="button" data-toggle="collapse" data-target="#collapsibleNavbar-2">
+                            <span class="fa fa-bars"></span>
+                        </button>
+                    </div>
+                    <div class="collapse navbar-collapse  p-0 py-1 w-100" id="collapsibleNavbar-2">
+                        <div class="float-lg-left text-center-cus">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
                                     <a href="#" class="nav-link py-0 px-0 vertical-bar">TRANG CHỦ</a>
@@ -129,6 +128,8 @@
                                 </li>
                             </ul>
                         </div>
+                    </div>
+
                 </nav>
             </div>
         </div>
@@ -186,7 +187,7 @@
             <div class="row">
                 <div id="main-left" class="col-lg-9 col-md-12 col-sm-12">
                     <div id="summary" class="row">
-                        <div id="tabs-img" class="p-2 rounded col-lg-5 col-md-12 col-sm-12  bg-light p-0">
+                        <div id="tabs-img" class=" mb-5 p-2 rounded col-lg-5 col-md-12 col-sm-12  bg-light p-0">
                             <div id="img-1" style="padding: 0px; margin-bottom: 10px;">
                                 <img id="zoom_01" width="100%" src="images/nokia.jpg" data-zoom-image="images/nokia.jpg">
                             </div>
@@ -235,7 +236,7 @@
                                 <!-- spinner -->
                                 <input type="text" name="" id="SoLuong" style="width: 50px">
                                 <br> <br>
-                                <button class="btn btn-outline-success" style="color: black"><i class="fa fa-cart-plus"></i>
+                                <button id="btnAdd" class="btn btn-outline-success" style="color: black"><i class="fa fa-cart-plus"></i>
                                     Thêm vào giỏ hàng</button>
                                 <button class="btn bg-color-2"><i class="fa fa-check"></i>Mua ngay</button>
                                 <br>
@@ -252,14 +253,11 @@
                         </div>
                     </div>
                     <div id="detail" class="mt-5">
-                        <!-- <div class="container"> -->
                         <div id="tabs">
                             <ul>
                                 <li><a href="#ChiTiet">Chi tiết sản phẩm</a></li>
                                 <li><a href="#ThongSo">Thông số kỹ thuật</a></li>
                             </ul>
-
-                            <!-- <div class="tab-content"> -->
                             <div id="ChiTiet" class="">
                                 <p>Cùng với Nokia X, Nokia XL đã được hãng cho ra mắt với nhiều bất ngờ. Nokia
                                     XL mang
@@ -295,13 +293,9 @@
                                     trên chiếc Nokia XL này.</p>
                             </div>
                             <div id="ThongSo">
-                                <div id="TongQuan" class="row mb-1 bg-secondary">
+                                <!-- <div id="TongQuan" class="row mb-1 bg-secondary">
                                     <div class="col-2  bg-secondary my-auto">
-                                        <div class="h-100 ">
                                             <p class="text-white"><strong>Tổng quan</strong></p>
-
-                                        </div>
-
                                     </div>
                                     <div class="col-10 bg-white">
                                         <div class="row bg-light mb-1" id="Mang2G">
@@ -811,15 +805,24 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div>  -->
                             </div>
-                            <!-- </div> -->
                         </div>
-
-                        <!-- </div> -->
-
-
-
+                    </div>
+                    <div id="path" class="pt-3">
+                        <a href="#">Trang chủ</a>
+                        <span class="fa fa-angle-double-right"></span>
+                        <a href="#" class="dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Điện thoại</a>
+                        <span class="fa fa-angle-double-right"></span>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item" href="#">Sony</a>
+                            <a class="dropdown-item" href="#">Samsung</a>
+                            <a class="dropdown-item" href="#">Nokia</a>
+                            <a class="dropdown-item" href="#">Apple</a>
+                          </div>
+                        <a href="#">Nokia</a>
+                        <span class="fa fa-angle-double-right"></span>                        
+                        <a href="#"><strong>Nokia XL(CTY)</strong></a>
                     </div>
                 </div>
 
@@ -853,7 +856,7 @@
                     </div>
                     <h6 style="border-bottom: 1px solid black">SẢN PHẨM HOT</h6>
                     <div class="product text-center pb-3 ">
-                        <a href="#"> <img src="images/nokia-925.jpg" alt="Nokia Lumia 925" class="w-100 img-prod p-3"></a>
+                        <a href="#"> <img src="images/nokia-925.png" alt="Nokia Lumia 925" class="w-100 img-prod p-3"></a>
                         <a href="#">NOKIA LUMIA 925(CTY)</a> <br>
                         <span><strong>7.704.000 ₫</strong></span>
                         <span style="text-decoration: line-through" class="pl-2">8.560.000 ₫</span>
@@ -862,7 +865,7 @@
                     </div>
 
                     <div class="product text-center pb-3">
-                        <a href="#"> <img src="images/samsung core 2.jpg" alt="Nokia Lumia 925" class="w-100 img-prod p-3"></a>
+                        <a href="#"> <img src="images/samsung core 2.png" alt="Nokia Lumia 925" class="w-100 img-prod p-3"></a>
                         <a href="#">SAMSUNG GALAXY CORE 2 - G355 (CTY)</a> <br>
                         <span><strong>3.040.000 ₫</strong></span>
                         <span style="text-decoration: line-through" class="pl-2">3.200.000 ₫</span>
@@ -956,18 +959,6 @@
                                 </div>
                                 <!-- </div> -->
                             </div>
-
-                            <!-- <div class="mb-3 my-auto ">
-                                    <input id="emailSignup" width="100%" type="text" class="form-control" placeholder="Nhập Email đăng ký khuyến mại">
-                                    <div id="plane" class="">
-                                        <a id="plane" href="#">
-                                            <span class="fa-stack fa-lg">
-                                                <i class="fa fa-circle fa-stack-2x color-1"></i>
-                                                <i class="fa fa-paper-plane fa-stack-1x fa-inverse color-2"></i>
-                                            </span>
-                                        </a>
-                                    </div>
-                                </div> -->
                         </div>
                     </div>
                 </div>
