--- a/owl-DoiTac.html
+++ b/owl-DoiTac.html
@@ -18,19 +18,19 @@
     <div>
         <div class="owl-carousel owl-theme">
             <div class="item">
-                <img src="images/LGlogo.png" alt="">
+                <img src="images/LGlogo.png" title="LG">
             </div>
             <div class="item">
-                <img src="images/nokia_logo.jpeg" alt="">
+                <img src="images/nokia_logo.jpeg" title="Nokia">
             </div>
             <div class="item">
-                <img src="images/samsung.png" alt="">
+                <img src="images/samsung.png" title="SamSung">
             </div>
             <div class="item">
-                <img src="images/blackberry.png" alt="">
+                <img src="images/blackberry.png" title="BlackBerry">
             </div>
             <div class="item">
-                <img src="images/Sony_Ericsson85.png" alt="">
+                <img src="images/Sony_Ericsson85.png" title="Sony">
             </div>
         </div>
     </div>
